# usbills.ai

./: .gitignore  README.md  alembic.ini  config.json  package-lock.json  package.json  pyproject.toml  setup.sh  tailwind.config.js  update.sh
alembic/: env.py  revision.sh  upgrade.sh
docker/: docker-compose.yml
docker/solr/: Dockerfile  schema.xml  solrconfig.xml
static/: ai.txt  robots.txt  sitemap.xml  tailwind.css  tailwind.input.css
static/js/: script.js
templates/: about.html  bill.html  index.html  leaderboard.html  privacy.html  search.html  stats.html
templates/partials/base/: base.html  fonts.html  footer.html
templates/partials/bills/: bill_analysis.html  bill_overview.html  bill_sections.html  bill_stats.html  list_view.html  population_stats.html
usbills_app/: api.py  config.py  logger.py
usbills_app/cli/: clear_cache.py  generate_sitemap.py  load_bill_json.py  load_solr.py  update_bill_percentiles.py  update_bills.py
usbills_app/db/: __init__.py  engine.py
usbills_app/db/models/: __init__.py  base.py  bill.py  bill_section.py  constants.py
usbills_app/db/query/: __init__.py  bills.py  stats.py
usbills_app/routers/: __init__.py  api.py  bills.py  index.py  search.py  static.py
usbills_app/routers/models/: __init__.py  bills.py
usbills_app/sources/govinfo/: billres-details.xsl  billres.xsl  govinfo_parser.py  govinfo_prompts.py  govinfo_source.py  govinfo_types.py  table.xsl
usbills_app/templates/: __init__.py  cache.py  minifier.py  renderer.py
usbills_app/utils/: readability.py  slugs.py  solr.py  templates.py
