[tool.poetry]
name = "usbills.ai"
version = "0.1.1"
description = ""
authors = ["Mike Bommarito <mike@aleainstitute.ai>"]
readme = "README.md"
packages = [{include = "usbills_app"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = ">=0.115.6"
uvicorn = ">=0.34.0"
sqlalchemy = ">=2.0.36"
jinja2 = ">=3.1.5"
alembic = ">=1.14.0"
asyncpg = ">=0.30.0"
tdewolff-minify = ">=2.20.37"
markdown = ">=3.7"
httpx = {version=">=0.28.1", extras=["http2"]}
alea-llm-client = ">=0.1.2"
lxml = ">=5.3.0"
alea-preprocess = ">=0.1.12"
numpy = ">=2.2.1"
spacy = ">=3.8.3"
redis = ">=5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
